# Decretum

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/examples/: 6502_hello.dcrt  armcm_controlflow.dcrt  armcm_fibonacci.dcrt  bios16_microkernel.dcrt  mips_compute.dcrt  pe_random.dcrt  pe_string_ops.dcrt  riscv_cheri_sum.dcrt  z80_powers.dcrt
.github/workflows/: ci.yml  static.yml
docs/: index.html
docs/assets/: style.css
docs/compiler/: backends.html  pe-target.html
docs/examples/: compute-pe.html  fibonacci.html  full-kernel.html  random.html  string-ops.html
docs/getting-started/: index.html
docs/language/: expressions.html  functions.html  syntax.html
docs/runtime/: bios-builtins.html  constraints.html  execution-model.html
docs/tools/: ide.html
src/: dcrt.rs  direct_8bit.rs  direct_aarch64.rs  direct_arch.rs  direct_arm.rs  direct_besm.rs  direct_bios.rs  direct_c166.rs  direct_cheri.rs  direct_console_arm_ppc.rs  direct_dsps.rs  direct_elbrus.rs  direct_elf.rs  direct_elf32.rs  direct_extreme.rs  direct_fpga.rs  direct_fr.rs  direct_h8.rs  direct_harvard.rs  direct_i386.rs  direct_ia64.rs  direct_intel_evo.rs  direct_jovial.rs  direct_m16c.rs  direct_macho.rs  direct_mainframe.rs  direct_mcu.rs  direct_mil1750a.rs  direct_mill.rs  direct_mir.rs  direct_moto_mos.rs  direct_msp430.rs  direct_nec_78k.rs  direct_nec_v20.rs  direct_opt.rs  direct_pdp_vax.rs  direct_peephole.rs  direct_quantum64.rs  direct_quantum8.rs  direct_quantum_core.rs  (+22 more)
